Bug 1373739 - Apply thumb styles directly to their orientation variants. r=mossop
Previously the min-height style from vertical thumbs was allowed to
cascade down to horizontal thumbs. This caused broken scrollbar sizing
behavior when running without a native (platform/widget toolkit) theme:
horizontal scrollbars would have a non-zero height and width while
vertical scrollbars would have a zero width and non-zero height.
This broke one of the web platform tests in headless mode
(/intersection-observer/root-margin.html).

MozReview-Commit-ID: 4Y3jz77Z0UA

UltraBlame original commit: 349c74ed0bd1e3d57a6182d7dbce48cc2fa294a3

--- a/toolkit/themes/osx/global/nativescrollbars.css
+++ b/toolkit/themes/osx/global/nativescrollbars.css
@@ -41,12 +41,12 @@ slider[orient="vertical"] {
 
 
 
-thumb {
-  -moz-appearance: scrollbarthumb-horizontal;
-}
-
 thumb[orient="vertical"] {
   -moz-appearance: scrollbarthumb-vertical;
+}
+
+thumb[orient="horizontal"] {
+  -moz-appearance: scrollbarthumb-horizontal;
 }
 
 
